--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth0/auth0-spa-js": "^1.22.4",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
 		"mongodb": "^4.10.0",
 		"svelte-fa": "^3.0.3"
